# lensfolia

./: API_TEST_EXAMPLES.md  NOTIFICATION_INTEGRATION.md  PUSH_NOTIFICATION_TROUBLESHOOTING.md  README.md  package.json
next/: .gitignore  CSS_OFFLINE_TEST_v3.md  ENHANCED_OFFLINE_TEST.md  OFFLINE_TESTING_GUIDE.md  PWA_OFFLINE_GUIDE.md  README.md  check-and-fix-table.sql  global.d.ts  middleware.ts  next.config.ts  package-lock.json  package.json  supabase-push-subscriptions.sql  supabase-setup-push.sql  tsconfig.json
next/app/: globals.css  layout.tsx  manifest.ts  page.tsx  sw.ts
next/components/: DynamicBG.tsx  InstallPWA.tsx  Loading.tsx  OfflineIndicator.tsx  PWAPreloader.tsx  SpotlightCard.tsx  StaticBG.tsx
next/hooks/: useAuth.ts  usePushNotifications-new.ts  usePushNotifications.ts  useServiceWorker.ts  useVote.ts
next/lib/: debugPushNotifications.ts  notifications.ts  products.ts  serviceWorkerDiagnostics.ts
next/public/: manifest.json  sw.js  swe-worker-development.js
research/: .gitignore
research/dinov2-research-engine/: sample_data.py  similarity-search.ipynb
research/documents-retrieval-engine/: retriever-qdrant.ipynb  retriever-supabase.ipynb
research/two-stage-detection-engine/: classification.ipynb  (+3 more)
services/: .gitignore  README.md
services/chatbot/: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  deploy.sh  main.py  pyproject.toml  rag.py
services/chatbot/src/agent/: graph.py
services/diagnosis/: Dockerfile  deploy.sh  pyproject.toml
services/diagnosis/src/agent/: configuration.py  detection.py  graph.py  pipeline.py  prompts.py  retrieval.py  schemas.py  state.py  tools.py  utils.py
(+117 files in other folders)
