[project]
name = "chatbot_service"
version = "0.1.0"
description = ""
authors = []
requires-python = "==3.11.*"
maintainers = []

dependencies = [
    "fastapi[standard]",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "python-dotenv>=1.1.1",
    "supabase>=2.18.0",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
